# crm-react-fastapi

./: .gitignore
CRM_frontend/: Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
CRM_frontend/src/: App.jsx  index.css  main.jsx
CRM_frontend/src/api/: api.js  assetUrl.js  authApi.js  axios.js  bankApi.js  customerApi.js  dashboardApi.js  loginApi.js  permissionsApi.js  roleApi.js  rolesApi.js  userApi.js  usersApi.js
CRM_frontend/src/components/: DatePicker.jsx  DateTimePicker.jsx  ProtectedRoute.jsx  (+15 more)
CRM_project/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
CRM_project/alembic/versions/: 8214307ab96b_change_username.py
CRM_project/app/: database.py  main.py
CRM_project/app/api/v1/: bank.py  customers.py  permissions.py  role_hierarchy.py  roles.py
CRM_project/app/core/: config.py  dependencies.py  input_validation.py
CRM_project/app/middleware/: input_validation.py
CRM_project/app/models/: role.py  user.py
CRM_project/app/modules/auth/: repository.py  router.py  schema.py  service.py
CRM_project/app/modules/bank/: repository.py  router.py  schema.py  service.py
CRM_project/app/modules/customer/: repository.py  router.py  schema.py  service.py
CRM_project/app/modules/role/: repository.py  router.py  schema.py  service.py
CRM_project/app/modules/user/: repository.py  router.py  schema.py  service.py
CRM_project/app/schemas/: auth.py
CRM_project/app/seeds/: factories.py  seed.py
CRM_project/app/services/: __init__.py  upload.py
(+126 files in other folders)
