[project]
name = "crm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0.0",
    "boto3>=1.43.36",
    "crypto>=1.4.1",
    "cryptography>=48.0.0",
    "faker>=40.19.1",
    "fastapi[standard]>=0.115.0",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
